--- a/About.css
+++ b/About.css
@@ -283,7 +283,7 @@
 .u-section-3 .u-image-1 {
   width: 240px;
   height: 240px;
-  background-image: url("images/download1.png");
+  background-image: url("images/WhatsAppImage2022-09-21at7.26.02PM.jpeg");
   background-position: 50% 50%;
   margin: 0 auto;
 }
@@ -318,7 +318,7 @@
 .u-section-3 .u-image-2 {
   width: 240px;
   height: 240px;
-  background-image: url("images/WhatsAppImage2022-09-21at7.25.43PM.jpeg");
+  background-image: url("images/parahara/286675328_543107627477740_6623667150968718607_n.jpg");
   background-position: 50% 50%;
   margin: 0 auto;
 }
@@ -353,7 +353,7 @@
 .u-section-3 .u-image-3 {
   width: 240px;
   height: 240px;
-  background-image: url("images/WhatsAppImage2022-09-21at7.26.02PM.jpeg");
+  background-image: url("images/WhatsAppImage2022-09-21at7.25.43PM.jpeg");
   background-position: 50% 50%;
   margin: 0 auto;
 }
@@ -388,7 +388,7 @@
 .u-section-3 .u-image-4 {
   width: 240px;
   height: 240px;
-  background-image: url("images/20220926-101654.jpg");
+  background-image: url("images/WhatsApp Image 2022-09-23 at 6.50.59 AM.jpeg");
   background-position: 50% 50%;
   margin: 0 auto;
 }
@@ -423,7 +423,7 @@
 .u-section-3 .u-image-5 {
   width: 240px;
   height: 240px;
-  background-image: url("images/20220926-102852.jpg");
+  background-image: url("images/20220926-101654.jpg");
   background-position: 50% 50%;
   margin: 0 auto;
 }
@@ -458,7 +458,7 @@
 .u-section-3 .u-image-6 {
   width: 240px;
   height: 240px;
-  background-image: url("images/download1.png");
+  background-image: url("images/20220926-102852.jpg");
   background-position: 50% 50%;
   margin: 0 auto;
 }
