--- a/school-parahara-news.css
+++ b/school-parahara-news.css
@@ -17,7 +17,7 @@
 .u-section-1 .u-image-1 {
   min-height: 725px;
   pointer-events: auto;
-  background-image: url("images/default-image-18.jpg");
+  background-image: url("images/296005448_5360551620732500_5952687693994352899_n.jpg");
   background-position: 50% 50%;
 }
 
