--- a/Home.css
+++ b/Home.css
@@ -1283,3 +1283,11 @@
     margin: 11px -50px 0;
   }
 }
+#preloader{
+  background: #000 url(images/BlandMildDungbeetle-size_restricted.gif) no-repeat center center;
+  background-size: 15%;
+  heigth: 100vh;
+  width: 100%;
+  position: fixed;
+  z-index: 100;
+{
