--- a/Home.css
+++ b/Home.css
@@ -1283,3 +1283,11 @@
     margin: 11px -50px 0;
   }
 }
+#preloader{
+  background: #000 url(images/f28aca0d2e241f042aeb9bc94901bb38.gif) no-repeat center center;
+  background-size: 50%;
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  z-index: 100;
+}
