--- a/About.css
+++ b/About.css
@@ -1,19 +1,22 @@
  .u-section-1 {
-  background-image: url("/images/29389113_1886386088041050_3998345386975559680_n.jpg");
+  background-image: url("images/29389113_1886386088041050_3998345386975559680_n.jpg");
   background-position: 50% 50%;
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 727px;
+  min-height: 728px;
 }
 
 .u-section-1 .u-layout-wrap-1 {
-  margin-top: 60px;
-  margin-bottom: 59px;
+  margin-top: 62px;
+  margin-bottom: 60px;
 }
 
 .u-section-1 .u-layout-cell-1 {
   min-height: 606px;
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-scale: 1;
+  --animation-custom_in-translate_y: 300px;
 }
 
 .u-section-1 .u-container-layout-1 {
@@ -23,7 +26,7 @@
 .u-section-1 .u-image-1 {
   width: 300px;
   height: 300px;
-  background-image: url("/images/20220831_104506.png");
+  background-image: url("images/20220831_104506.png");
   background-position: 50% 50%;
   margin: 36px auto 0 404px;
 }
@@ -144,7 +147,7 @@
     margin-top: 78px;
   }
 } .u-section-2 {
-  background-image: url("/images/285849460_543101564145013_9182844418940147543_n.jpg");
+  background-image: url("images/285849460_543101564145013_9182844418940147543_n.jpg");
   background-position: 0% 69.24%;
   background-size: 125%;
 }
@@ -167,13 +170,19 @@
 .u-section-2 .u-image-1 {
   width: 226px;
   height: 226px;
-  background-image: url("/images/20220926-102437.jpg");
+  background-image: url("images/20220926-102437.jpg");
   background-position: 50% 50%;
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
   margin: 37px auto 0;
 }
 
 .u-section-2 .u-text-1 {
   font-size: 2.25rem;
+  transition-duration: 0.5s;
   margin: 47px 0 0;
 }
 
@@ -249,6 +258,12 @@
   .u-section-2 .u-text-1 {
     font-size: 1.875rem;
   }
+}
+
+.u-section-2 .u-text-1,
+.u-section-2 .u-text-1:before,
+.u-section-2 .u-text-1 > .u-container-layout:before {
+  transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, image-zoom, background-size, background-position;
 } .u-section-3 {
   min-height: 705px;
 }
@@ -274,6 +289,11 @@
 .u-section-3 .u-list-item-1 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.15);
   background-image: none;
+  --animation-custom_in-translate_x: -300px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
 }
 
 .u-section-3 .u-container-layout-1 {
@@ -283,7 +303,7 @@
 .u-section-3 .u-image-1 {
   width: 240px;
   height: 240px;
-  background-image: url("/images/download1.png");
+  background-image: url("images/download1.png");
   background-position: 50% 50%;
   margin: 0 auto;
 }
@@ -309,6 +329,11 @@
 .u-section-3 .u-list-item-2 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.15);
   background-image: none;
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: -300px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
 }
 
 .u-section-3 .u-container-layout-2 {
@@ -318,7 +343,7 @@
 .u-section-3 .u-image-2 {
   width: 240px;
   height: 240px;
-  background-image: url("/images/WhatsAppImage2022-09-21at7.25.43PM.jpeg");
+  background-image: url("images/WhatsAppImage2022-09-21at7.25.43PM.jpeg");
   background-position: 50% 50%;
   margin: 0 auto;
 }
@@ -344,6 +369,11 @@
 .u-section-3 .u-list-item-3 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.15);
   background-image: none;
+  --animation-custom_in-translate_x: 300px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
 }
 
 .u-section-3 .u-container-layout-3 {
@@ -353,7 +383,7 @@
 .u-section-3 .u-image-3 {
   width: 240px;
   height: 240px;
-  background-image: url("/images/WhatsAppImage2022-09-21at7.26.02PM.jpeg");
+  background-image: url("images/WhatsAppImage2022-09-21at7.26.02PM.jpeg");
   background-position: 50% 50%;
   margin: 0 auto;
 }
@@ -379,6 +409,11 @@
 .u-section-3 .u-list-item-4 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.15);
   background-image: none;
+  --animation-custom_in-translate_x: -200px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
 }
 
 .u-section-3 .u-container-layout-4 {
@@ -388,7 +423,7 @@
 .u-section-3 .u-image-4 {
   width: 240px;
   height: 240px;
-  background-image: url("/images/20220926-101654.jpg");
+  background-image: url("images/20220926-101654.jpg");
   background-position: 50% 50%;
   margin: 0 auto;
 }
@@ -414,6 +449,11 @@
 .u-section-3 .u-list-item-5 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.15);
   background-image: none;
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 300px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
 }
 
 .u-section-3 .u-container-layout-5 {
@@ -423,7 +463,7 @@
 .u-section-3 .u-image-5 {
   width: 240px;
   height: 240px;
-  background-image: url("/images/20220926-102852.jpg");
+  background-image: url("images/20220926-102852.jpg");
   background-position: 50% 50%;
   margin: 0 auto;
 }
@@ -449,6 +489,9 @@
 .u-section-3 .u-list-item-6 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.15);
   background-image: none;
+  --animation-custom_in-translate_x: 300px;
+  --animation-custom_in-scale: 1;
+  --animation-custom_in-translate_y: 0px;
 }
 
 .u-section-3 .u-container-layout-6 {
@@ -458,7 +501,7 @@
 .u-section-3 .u-image-6 {
   width: 240px;
   height: 240px;
-  background-image: url("/images/download1.png");
+  background-image: url("images/download1.png");
   background-position: 50% 50%;
   margin: 0 auto;
 }
