--- a/Contact.css
+++ b/Contact.css
@@ -1,31 +1,37 @@
  .u-section-1 {
   background-image: none;
-  min-height: 958px;
+}
+
+.u-section-1 .u-sheet-1 {
+  min-height: 994px;
 }
 
 .u-section-1 .u-list-1 {
   width: 962px;
-  margin: 39px auto 0;
+  margin: 19px auto 0;
 }
 
 .u-section-1 .u-repeater-1 {
   grid-template-columns: calc(33.3333% - 14px) calc(33.3333% - 14px) calc(33.3333% - 14px);
-  min-height: 260px;
+  min-height: 299px;
   grid-gap: 21px 21px;
 }
 
 .u-section-1 .u-list-item-1 {
   background-image: none;
+  --animation-custom_in-translate_x: -300px;
+  --animation-custom_in-scale: 1;
+  --animation-custom_in-translate_y: 0px;
 }
 
 .u-section-1 .u-container-layout-1 {
-  padding: 30px 0;
+  padding: 0;
 }
 
 .u-section-1 .u-icon-1 {
   height: 64px;
   width: 64px;
-  margin: 0 auto;
+  margin: 72px auto 0;
 }
 
 .u-section-1 .u-text-1 {
@@ -35,27 +41,26 @@
 }
 
 .u-section-1 .u-text-2 {
-  margin: 25px 9px 0;
-}
-
-.u-section-1 .u-btn-1 {
-  border-style: solid;
-  font-weight: 700;
-  padding: 0;
+  margin: 25px 7px 0;
 }
 
 .u-section-1 .u-list-item-2 {
   background-image: none;
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: -300px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
 }
 
 .u-section-1 .u-container-layout-2 {
-  padding: 30px 0;
+  padding: 0;
 }
 
 .u-section-1 .u-icon-2 {
   height: 64px;
   width: 64px;
-  margin: 0 auto;
+  margin: 72px auto 0;
 }
 
 .u-section-1 .u-text-3 {
@@ -65,21 +70,32 @@
 }
 
 .u-section-1 .u-text-4 {
-  margin: 25px 9px 0;
+  margin: 25px 7px 0;
+}
+
+.u-section-1 .u-btn-1 {
+  border-style: solid;
+  font-weight: 700;
+  padding: 0;
 }
 
 .u-section-1 .u-list-item-3 {
   background-image: none;
+  --animation-custom_in-translate_x: 300px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
 }
 
 .u-section-1 .u-container-layout-3 {
-  padding: 30px 0;
+  padding: 0;
 }
 
 .u-section-1 .u-icon-3 {
   height: 64px;
   width: 64px;
-  margin: 0 auto;
+  margin: 72px auto 0;
 }
 
 .u-section-1 .u-text-5 {
@@ -89,17 +105,22 @@
 }
 
 .u-section-1 .u-text-6 {
-  margin: 25px 9px 0;
+  margin: 25px 7px 0;
 }
 
 .u-section-1 .u-layout-wrap-1 {
-  width: 1140px;
-  margin: 25px auto 43px;
+  width: 604px;
+  margin: 30px auto 49px;
 }
 
 .u-section-1 .u-layout-cell-1 {
   min-height: 609px;
   background-image: none;
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: -300px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
 }
 
 .u-section-1 .u-container-layout-4 {
@@ -157,18 +178,9 @@
   padding: 10px 0;
 }
 
-.u-section-1 .u-layout-cell-2 {
-  min-height: 609px;
-  background-image: none;
-}
-
-.u-section-1 .u-container-layout-5 {
-  padding: 0;
-}
-
 @media (max-width: 1199px) {
-   .u-section-1 {
-    min-height: 851px;
+  .u-section-1 .u-sheet-1 {
+    min-height: 887px;
   }
 
   .u-section-1 .u-list-1 {
@@ -176,7 +188,7 @@
   }
 
   .u-section-1 .u-repeater-1 {
-    min-height: 254px;
+    min-height: 292px;
   }
 
   .u-section-1 .u-text-1 {
@@ -207,14 +219,6 @@
   .u-section-1 .u-text-6 {
     margin-left: 0;
     margin-right: 0;
-  }
-
-  .u-section-1 .u-layout-wrap-1 {
-    width: 940px;
-  }
-
-  .u-section-1 .u-layout-cell-1 {
-    min-height: 511px;
   }
 
   .u-section-1 .u-form-1 {
@@ -226,77 +230,48 @@
     padding-right: 176px;
     padding-left: 175px;
   }
-
-  .u-section-1 .u-layout-cell-2 {
-    min-height: 502px;
-  }
 }
 
 @media (max-width: 991px) {
-   .u-section-1 {
-    min-height: 734px;
+  .u-section-1 .u-sheet-1 {
+    min-height: 1688px;
   }
 
   .u-section-1 .u-list-1 {
     width: 720px;
+    margin-top: 50px;
   }
 
   .u-section-1 .u-repeater-1 {
     grid-template-columns: calc(50% - 10.5px) calc(50% - 10.5px);
     min-height: 672px;
-  }
-
-  .u-section-1 .u-icon-1 {
-    margin-top: 17px;
+    grid-auto-columns: calc(50% - 10.5px);
   }
 
   .u-section-1 .u-text-1 {
-    width: auto;
-    margin-top: 25px;
     margin-left: 0;
     margin-right: 0;
-  }
-
-  .u-section-1 .u-text-2 {
-    width: auto;
-  }
-
-  .u-section-1 .u-icon-2 {
-    margin-top: 17px;
   }
 
   .u-section-1 .u-text-3 {
-    width: auto;
-    margin-top: 25px;
     margin-left: 0;
     margin-right: 0;
-  }
-
-  .u-section-1 .u-text-4 {
-    width: auto;
-  }
-
-  .u-section-1 .u-icon-3 {
-    margin-top: 17px;
   }
 
   .u-section-1 .u-text-5 {
-    width: auto;
-    margin-top: 25px;
     margin-left: 0;
     margin-right: 0;
   }
 
-  .u-section-1 .u-text-6 {
+  .u-section-1 .u-layout-wrap-1 {
+    margin-bottom: 60px;
+    margin-right: initial;
+    margin-left: initial;
     width: auto;
   }
 
-  .u-section-1 .u-layout-wrap-1 {
-    width: 720px;
-  }
-
   .u-section-1 .u-layout-cell-1 {
-    min-height: 607px;
+    min-height: 541px;
   }
 
   .u-section-1 .u-form-1 {
@@ -307,19 +282,19 @@
     padding-right: 122px;
     padding-left: 120px;
   }
-
-  .u-section-1 .u-layout-cell-2 {
-    min-height: 607px;
-  }
 }
 
 @media (max-width: 767px) {
-   .u-section-1 {
-    min-height: 1027px;
+  .u-section-1 .u-sheet-1 {
+    min-height: 1907px;
   }
 
   .u-section-1 .u-list-1 {
     width: 540px;
+  }
+
+  .u-section-1 .u-repeater-1 {
+    grid-auto-columns: calc(100% - 0px);
   }
 
   .u-section-1 .u-container-layout-1 {
@@ -338,11 +313,15 @@
   }
 
   .u-section-1 .u-layout-wrap-1 {
-    width: 540px;
+    margin-top: 35px;
+    margin-bottom: 50px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-1 .u-layout-cell-1 {
-    min-height: 581px;
+    min-height: 100px;
   }
 
   .u-section-1 .u-container-layout-4 {
@@ -362,23 +341,24 @@
     margin-right: 0;
     margin-left: 0;
   }
-
-  .u-section-1 .u-layout-cell-2 {
-    min-height: 532px;
-  }
 }
 
 @media (max-width: 575px) {
-   .u-section-1 {
-    min-height: 813px;
+  .u-section-1 .u-sheet-1 {
+    min-height: 1842px;
   }
 
   .u-section-1 .u-list-1 {
-    width: 340px;
+    margin-top: 37px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-1 .u-repeater-1 {
     grid-template-columns: 100%;
+    min-height: 709px;
+    grid-auto-columns: 100%;
   }
 
   .u-section-1 .u-container-layout-1 {
@@ -386,9 +366,35 @@
     padding-right: 30px;
   }
 
+  .u-section-1 .u-icon-1 {
+    margin-top: 16px;
+  }
+
+  .u-section-1 .u-text-1 {
+    width: auto;
+    margin-top: 17px;
+  }
+
+  .u-section-1 .u-text-2 {
+    width: auto;
+  }
+
   .u-section-1 .u-container-layout-2 {
     padding-left: 30px;
     padding-right: 30px;
+  }
+
+  .u-section-1 .u-icon-2 {
+    margin-top: 16px;
+  }
+
+  .u-section-1 .u-text-3 {
+    width: auto;
+    margin-top: 17px;
+  }
+
+  .u-section-1 .u-text-4 {
+    width: auto;
   }
 
   .u-section-1 .u-container-layout-3 {
@@ -396,12 +402,24 @@
     padding-right: 30px;
   }
 
-  .u-section-1 .u-layout-wrap-1 {
-    width: 340px;
+  .u-section-1 .u-icon-3 {
+    margin-top: 16px;
   }
 
-  .u-section-1 .u-layout-cell-1 {
-    min-height: 673px;
+  .u-section-1 .u-text-5 {
+    width: auto;
+    margin-top: 17px;
+  }
+
+  .u-section-1 .u-text-6 {
+    width: auto;
+  }
+
+  .u-section-1 .u-layout-wrap-1 {
+    margin-bottom: 60px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-1 .u-container-layout-4 {
@@ -427,8 +445,19 @@
     padding-left: 0;
     padding-right: 0;
   }
+} .u-section-2 {
+  background-image: url("images/images2.png");
+  background-position: 50% 50%;
+  min-height: 50vw;
+}
 
-  .u-section-1 .u-layout-cell-2 {
-    min-height: 349px;
-  }
+.u-section-2 .u-map-1 {
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 300px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+  height: 586px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
