--- a/Post-Template.css
+++ b/Post-Template.css
@@ -17,7 +17,7 @@
 .u-section-1 .u-image-1 {
   min-height: 725px;
   pointer-events: auto;
-  background-image: url("/images/296005448_5360551620732500_5952687693994352899_n.jpg");
+  background-image: url("images/296005448_5360551620732500_5952687693994352899_n.jpg");
   background-position: 50% 50%;
 }
 
@@ -301,4 +301,13 @@
     width: 340px;
     height: 2604px;
   }
+}.u-section-2 .u-sheet-1 {
+  min-height: 500px;
+}
+
+.u-section-2 .u-custom-html-1 {
+  margin-bottom: 46px;
+  height: auto;
+  min-height: 66px;
+  margin-top: 388px;
 }
