--- a/header.css
+++ b/header.css
@@ -38825,18 +38825,20 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-sheet-1 {
-  min-height: 163px;
+  min-height: 176px;
 }
 
 .u-header .u-btn-1 {
   background-image: none;
-  margin: 16px 38px 0 auto;
+  border-style: solid;
+  margin: 24px 32px 0 auto;
   padding: 10px 40px;
 }
 
 .u-header .u-btn-2 {
   background-image: none;
-  margin: -45px 191px 0 auto;
+  border-style: solid;
+  margin: -53px 191px 0 auto;
   padding: 10px 40px;
 }
 
@@ -38876,6 +38878,10 @@ a.u-link.u-text-hover-grey-90:hover {
   padding: 14px 30px 16px;
 }
 
+.u-header .u-icon-5 {
+  font-size: 1.125em;
+}
+
 .u-header .u-btn-4 {
   letter-spacing: 1px;
   font-weight: 700;
@@ -38896,13 +38902,13 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-sheet-2 {
-  min-height: 340px;
+  min-height: 355px;
 }
 
 .u-header .u-image-1 {
-  width: 252px;
-  height: 237px;
-  margin: 2px auto 0;
+  width: 276px;
+  height: 259px;
+  margin: 0 auto;
 }
 
 .u-header .u-logo-image-1 {
@@ -38911,7 +38917,7 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-menu-1 {
-  margin: 5px auto 34px;
+  margin: 9px auto 29px;
 }
 
 .u-header .u-file-icon-6 {
@@ -38938,6 +38944,7 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 
   .u-header .u-btn-2 {
+    margin-top: -53px;
     margin-right: 0;
   }
 
@@ -38965,16 +38972,17 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 @media (max-width: 1199px) {
   .u-header .u-sheet-2 {
-    min-height: 334px;
+    min-height: 359px;
   }
 
   .u-header .u-image-1 {
-    margin-top: 1px;
+    width: 274px;
+    height: 257px;
   }
 
   .u-header .u-menu-1 {
-    margin-top: 0;
-    margin-bottom: 34px;
+    margin-top: 16px;
+    margin-bottom: 28px;
   }
 }
 @media (max-width: 991px) {
@@ -39000,20 +39008,18 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 @media (max-width: 991px) {
   .u-header .u-sheet-2 {
-    min-height: 339px;
+    min-height: 288px;
   }
 
   .u-header .u-image-1 {
-    width: 360px;
-    height: 339px;
-    margin-top: 0;
+    margin-top: 18px;
     margin-left: 0;
   }
 
   .u-header .u-menu-1 {
     width: auto;
-    margin-top: -207px;
-    margin-right: 97px;
+    margin-top: -164px;
+    margin-right: 44px;
     margin-bottom: 60px;
   }
 
@@ -39028,10 +39034,6 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 }
 @media (max-width: 767px) {
-  .u-header .u-sheet-1 {
-    min-height: 234px;
-  }
-
   .u-header .u-btn-1 {
     margin-right: 148px;
   }
@@ -39047,7 +39049,7 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 
   .u-header .u-btn-3 {
-    margin-top: 16px;
+    margin-top: 29px;
     margin-right: auto;
     margin-left: 0;
   }
@@ -39060,32 +39062,39 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 @media (max-width: 767px) {
   .u-header .u-sheet-2 {
-    min-height: 280px;
+    min-height: 253px;
   }
 
   .u-header .u-image-1 {
-    width: 298px;
-    height: 279px;
-    margin-left: -28px;
+    width: 254px;
+    height: 238px;
+    margin-top: 12px;
+    margin-left: -18px;
   }
 
   .u-header .u-menu-1 {
-    margin-top: -155px;
-    margin-right: 35px;
+    margin-top: -153px;
+    margin-right: 42px;
+  }
+
+  .u-header .u-file-icon-6 {
+    padding-left: 25px;
+    padding-right: 25px;
   }
 }
 @media (max-width: 575px) {
   .u-header .u-sheet-1 {
-    min-height: 332px;
+    min-height: 306px;
   }
 
   .u-header .u-btn-1 {
-    margin-right: 0;
+    margin-top: 14px;
+    margin-right: 18px;
   }
 
   .u-header .u-btn-2 {
     margin-right: auto;
-    margin-left: 49px;
+    margin-left: 16px;
   }
 
   .u-header .u-social-icons-1 {
@@ -39094,35 +39103,36 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 
   .u-header .u-btn-3 {
+    margin-top: 16px;
     margin-left: auto;
   }
 
   .u-header .u-btn-4 {
-    margin-top: 16px;
+    margin-top: 9px;
     margin-right: auto;
-    margin-bottom: 40px;
+    margin-bottom: 17px;
   }
 }
 @media (max-width: 575px) {
   .u-header .u-sheet-2 {
-    min-height: 248px;
+    min-height: 207px;
   }
 
   .u-header .u-image-1 {
-    width: 265px;
-    height: 248px;
-    margin-top: 0;
-    margin-left: -50px;
+    width: 220px;
+    height: 206px;
+    margin-top: 5px;
+    margin-left: -35px;
   }
 
   .u-header .u-menu-1 {
-    margin-top: -132px;
-    margin-right: -22px;
+    margin-top: -130px;
+    margin-right: 12px;
   }
 
   .u-header .u-file-icon-6 {
-    font-size: calc(1em + 60px);
-    padding: 30px 56px;
+    font-size: calc(1em + 28px);
+    padding: 14px 56px;
   }
 }
 .u-footer .u-sheet-1 {
