--- a/Home.css
+++ b/Home.css
@@ -55,6 +55,12 @@
   }
 }
 
+@media (max-width: 767px) {
+  .u-section-1-1 .u-sheet-1 {
+    min-height: 338px;
+  }
+}
+
 @media (max-width: 575px) {
   .u-section-1-1 .u-sheet-1 {
     min-height: 300px;
