--- a/Contact.css
+++ b/Contact.css
@@ -3,7 +3,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 994px;
+  min-height: 1143px;
 }
 
 .u-section-1 .u-list-1 {
@@ -13,15 +13,16 @@
 
 .u-section-1 .u-repeater-1 {
   grid-template-columns: calc(33.3333% - 14px) calc(33.3333% - 14px) calc(33.3333% - 14px);
-  min-height: 299px;
+  min-height: 267px;
   grid-gap: 21px 21px;
 }
 
 .u-section-1 .u-list-item-1 {
-  background-image: none;
+  box-shadow: 0px 0 0 0 rgba(0,0,0,0);
+  transition-duration: 0.5s;
   --animation-custom_in-translate_x: -300px;
   --animation-custom_in-scale: 1;
-  --animation-custom_in-translate_y: 0px;
+  background-image: linear-gradient(#ffce00, #f1c50e);
 }
 
 .u-section-1 .u-container-layout-1 {
@@ -31,7 +32,9 @@
 .u-section-1 .u-icon-1 {
   height: 64px;
   width: 64px;
-  margin: 72px auto 0;
+  background-image: none;
+  margin: 28px auto 0;
+  padding: 10px;
 }
 
 .u-section-1 .u-text-1 {
@@ -45,12 +48,11 @@
 }
 
 .u-section-1 .u-list-item-2 {
-  background-image: none;
-  --animation-custom_in-translate_x: 0px;
-  --animation-custom_in-translate_y: -300px;
-  --animation-custom_in-opacity: 0;
-  --animation-custom_in-rotate: 0deg;
+  box-shadow: 0px 0 0 0 rgba(0,0,0,0);
+  transition-duration: 0.5s;
+  --animation-custom_in-translate_x: -300px;
   --animation-custom_in-scale: 1;
+  background-image: linear-gradient(#ffce00, #f1c50e);
 }
 
 .u-section-1 .u-container-layout-2 {
@@ -60,7 +62,9 @@
 .u-section-1 .u-icon-2 {
   height: 64px;
   width: 64px;
-  margin: 72px auto 0;
+  background-image: none;
+  margin: 28px auto 0;
+  padding: 9px;
 }
 
 .u-section-1 .u-text-3 {
@@ -80,12 +84,11 @@
 }
 
 .u-section-1 .u-list-item-3 {
-  background-image: none;
-  --animation-custom_in-translate_x: 300px;
-  --animation-custom_in-translate_y: 0px;
-  --animation-custom_in-opacity: 0;
-  --animation-custom_in-rotate: 0deg;
+  box-shadow: 0px 0 0 0 rgba(0,0,0,0);
+  transition-duration: 0.5s;
+  --animation-custom_in-translate_x: -300px;
   --animation-custom_in-scale: 1;
+  background-image: linear-gradient(#ffce00, #f1c50e);
 }
 
 .u-section-1 .u-container-layout-3 {
@@ -95,7 +98,9 @@
 .u-section-1 .u-icon-3 {
   height: 64px;
   width: 64px;
-  margin: 72px auto 0;
+  background-image: none;
+  margin: 28px auto 0;
+  padding: 10px;
 }
 
 .u-section-1 .u-text-5 {
@@ -108,13 +113,25 @@
   margin: 25px 7px 0;
 }
 
+.u-section-1 .u-shape-1 {
+  width: 250px;
+  height: 250px;
+  margin: 534px 202px 0 auto;
+}
+
+.u-section-1 .u-shape-2 {
+  width: 250px;
+  height: 250px;
+  margin: -756px auto 0 201px;
+}
+
 .u-section-1 .u-layout-wrap-1 {
   width: 604px;
-  margin: 30px auto 49px;
+  margin: -183px auto 60px;
 }
 
 .u-section-1 .u-layout-cell-1 {
-  min-height: 609px;
+  min-height: 632px;
   background-image: none;
   --animation-custom_in-translate_x: 0px;
   --animation-custom_in-translate_y: -300px;
@@ -124,19 +141,20 @@
 }
 
 .u-section-1 .u-container-layout-4 {
-  padding: 30px 20px;
+  box-shadow: 5px 5px 39px 3px rgba(255,255,255,0.4);
+  padding: 0;
 }
 
 .u-section-1 .u-text-7 {
   font-weight: 700;
   font-size: 3rem;
-  margin: 39px auto 0;
+  margin: 74px auto 0;
 }
 
 .u-section-1 .u-form-1 {
   height: 346px;
-  width: 510px;
-  margin: 43px auto 0;
+  background-image: none;
+  margin: 68px 36px 0 58px;
 }
 
 .u-section-1 .u-label-1 {
@@ -179,16 +197,17 @@
 }
 
 @media (max-width: 1199px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 887px;
-  }
-
   .u-section-1 .u-list-1 {
     width: 940px;
   }
 
   .u-section-1 .u-repeater-1 {
-    min-height: 292px;
+    min-height: 262px;
+  }
+
+  .u-section-1 .u-list-item-1 {
+    --animation-custom_in-translate_y: 0px;
+    background-position: 50% 50%;
   }
 
   .u-section-1 .u-text-1 {
@@ -201,6 +220,13 @@
     margin-right: 0;
   }
 
+  .u-section-1 .u-list-item-2 {
+    --animation-custom_in-translate_y: -300px;
+    --animation-custom_in-opacity: 0;
+    --animation-custom_in-rotate: 0deg;
+    background-position: 50% 50%;
+  }
+
   .u-section-1 .u-text-3 {
     margin-left: 19px;
     margin-right: 19px;
@@ -209,6 +235,13 @@
   .u-section-1 .u-text-4 {
     margin-left: 0;
     margin-right: 0;
+  }
+
+  .u-section-1 .u-list-item-3 {
+    --animation-custom_in-translate_y: 0px;
+    --animation-custom_in-opacity: 0;
+    --animation-custom_in-rotate: 0deg;
+    background-position: 50% 50%;
   }
 
   .u-section-1 .u-text-5 {
@@ -221,9 +254,14 @@
     margin-right: 0;
   }
 
-  .u-section-1 .u-form-1 {
-    width: 410px;
-    margin-top: 25px;
+  .u-section-1 .u-shape-1 {
+    margin-top: 531px;
+    margin-right: 95px;
+  }
+
+  .u-section-1 .u-shape-2 {
+    margin-top: -753px;
+    margin-left: 101px;
   }
 
   .u-section-1 .u-btn-2 {
@@ -234,18 +272,16 @@
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1688px;
+    min-height: 1548px;
   }
 
   .u-section-1 .u-list-1 {
     width: 720px;
-    margin-top: 50px;
   }
 
   .u-section-1 .u-repeater-1 {
     grid-template-columns: calc(50% - 10.5px) calc(50% - 10.5px);
     min-height: 672px;
-    grid-auto-columns: calc(50% - 10.5px);
   }
 
   .u-section-1 .u-text-1 {
@@ -263,19 +299,14 @@
     margin-right: 0;
   }
 
-  .u-section-1 .u-layout-wrap-1 {
-    margin-bottom: 60px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+  .u-section-1 .u-shape-1 {
+    margin-top: 534px;
+    margin-right: -17px;
   }
 
-  .u-section-1 .u-layout-cell-1 {
-    min-height: 541px;
-  }
-
-  .u-section-1 .u-form-1 {
-    width: 300px;
+  .u-section-1 .u-shape-2 {
+    margin-top: -756px;
+    margin-left: -17px;
   }
 
   .u-section-1 .u-btn-2 {
@@ -286,7 +317,7 @@
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1907px;
+    min-height: 1466px;
   }
 
   .u-section-1 .u-list-1 {
@@ -294,47 +325,71 @@
   }
 
   .u-section-1 .u-repeater-1 {
-    grid-auto-columns: calc(100% - 0px);
+    min-height: 591px;
   }
 
-  .u-section-1 .u-container-layout-1 {
-    padding-left: 20px;
-    padding-right: 20px;
+  .u-section-1 .u-icon-1 {
+    padding: 9px;
   }
 
-  .u-section-1 .u-container-layout-2 {
-    padding-left: 20px;
-    padding-right: 20px;
+  .u-section-1 .u-text-1 {
+    margin-left: 20px;
+    margin-right: 20px;
   }
 
-  .u-section-1 .u-container-layout-3 {
-    padding-left: 20px;
-    padding-right: 20px;
+  .u-section-1 .u-text-2 {
+    width: auto;
+    margin-top: 28px;
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  .u-section-1 .u-text-4 {
+    width: auto;
+    margin-top: 28px;
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+
+  .u-section-1 .u-icon-3 {
+    padding: 9px;
+  }
+
+  .u-section-1 .u-text-5 {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  .u-section-1 .u-text-6 {
+    width: auto;
+    margin-top: 28px;
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+
+  .u-section-1 .u-shape-1 {
+    margin-top: 494px;
+    margin-right: -28px;
+  }
+
+  .u-section-1 .u-shape-2 {
+    margin-top: -676px;
+    margin-left: -33px;
   }
 
   .u-section-1 .u-layout-wrap-1 {
-    margin-top: 35px;
-    margin-bottom: 50px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-1 .u-layout-cell-1 {
-    min-height: 100px;
-  }
-
-  .u-section-1 .u-container-layout-4 {
-    padding-left: 30px;
-    padding-right: 30px;
-  }
-
-  .u-section-1 .u-text-7 {
-    margin-top: 65px;
+    width: 540px;
+    margin-top: -223px;
   }
 
   .u-section-1 .u-form-1 {
-    width: 480px;
+    margin-right: 4px;
+    margin-left: 26px;
   }
 
   .u-section-1 .u-btn-2 {
@@ -345,20 +400,16 @@
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1842px;
+    min-height: 1787px;
   }
 
   .u-section-1 .u-list-1 {
-    margin-top: 37px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+    width: 340px;
   }
 
   .u-section-1 .u-repeater-1 {
     grid-template-columns: 100%;
-    min-height: 709px;
-    grid-auto-columns: 100%;
+    min-height: 810px;
   }
 
   .u-section-1 .u-container-layout-1 {
@@ -366,17 +417,14 @@
     padding-right: 30px;
   }
 
-  .u-section-1 .u-icon-1 {
-    margin-top: 16px;
-  }
-
   .u-section-1 .u-text-1 {
-    width: auto;
-    margin-top: 17px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-text-2 {
-    width: auto;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-container-layout-2 {
@@ -384,17 +432,14 @@
     padding-right: 30px;
   }
 
-  .u-section-1 .u-icon-2 {
-    margin-top: 16px;
-  }
-
   .u-section-1 .u-text-3 {
-    width: auto;
-    margin-top: 17px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-text-4 {
-    width: auto;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-container-layout-3 {
@@ -402,41 +447,45 @@
     padding-right: 30px;
   }
 
-  .u-section-1 .u-icon-3 {
-    margin-top: 16px;
-  }
-
   .u-section-1 .u-text-5 {
-    width: auto;
-    margin-top: 17px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-text-6 {
-    width: auto;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-shape-1 {
+    margin-top: 551px;
+    margin-right: -27px;
+  }
+
+  .u-section-1 .u-shape-2 {
+    margin-top: -773px;
   }
 
   .u-section-1 .u-layout-wrap-1 {
-    margin-bottom: 60px;
-    width: auto;
     margin-right: initial;
     margin-left: initial;
+    width: auto;
   }
 
-  .u-section-1 .u-container-layout-4 {
-    padding-left: 10px;
-    padding-right: 10px;
+  .u-section-1 .u-layout-cell-1 {
+    min-height: 732px;
   }
 
   .u-section-1 .u-text-7 {
     font-size: 2.75rem;
+    width: auto;
   }
 
   .u-section-1 .u-form-1 {
-    height: 443px;
-    width: 320px;
-    margin-top: 17px;
-    margin-left: 0;
-    margin-right: 0;
+    height: 453px;
+    margin-top: 69px;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-1 .u-btn-2 {
@@ -445,6 +494,60 @@
     padding-left: 0;
     padding-right: 0;
   }
+}
+
+.u-section-1 .u-list-item-3,
+.u-section-1 .u-list-item-3:before,
+.u-section-1 .u-list-item-3 > .u-container-layout:before {
+  transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, image-zoom, background-size, background-position;
+}
+
+.u-section-1 .u-list-item-3:before {
+  background-image: url(images/2304040.png) !important;
+}
+
+.u-section-1 .u-list-item-3.u-list-item-3.u-list-item-3:hover {
+  box-shadow: 2px 2px 34px 5px rgba(251,255,0,0.5) !important;
+}
+
+.u-section-1 .u-list-item-3.u-list-item-3.u-list-item-3.hover {
+  box-shadow: 2px 2px 34px 5px rgba(251,255,0,0.5) !important;
+}
+
+.u-section-1 .u-list-item-2,
+.u-section-1 .u-list-item-2:before,
+.u-section-1 .u-list-item-2 > .u-container-layout:before {
+  transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, image-zoom, background-size, background-position;
+}
+
+.u-section-1 .u-list-item-2:before {
+  background-image: url(images/vector-email-icon.webp) !important;
+}
+
+.u-section-1 .u-list-item-2.u-list-item-2.u-list-item-2:hover {
+  box-shadow: 2px 2px 34px 5px rgba(251,255,0,0.5) !important;
+}
+
+.u-section-1 .u-list-item-2.u-list-item-2.u-list-item-2.hover {
+  box-shadow: 2px 2px 34px 5px rgba(251,255,0,0.5) !important;
+}
+
+.u-section-1 .u-list-item-1,
+.u-section-1 .u-list-item-1:before,
+.u-section-1 .u-list-item-1 > .u-container-layout:before {
+  transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, image-zoom, background-size, background-position;
+}
+
+.u-section-1 .u-list-item-1:before {
+  background-image: url(images/desk-phone-icon-flat-01-.jpg) !important;
+}
+
+.u-section-1 .u-list-item-1.u-list-item-1.u-list-item-1:hover {
+  box-shadow: 2px 2px 34px 5px rgba(251,255,0,0.5) !important;
+}
+
+.u-section-1 .u-list-item-1.u-list-item-1.u-list-item-1.hover {
+  box-shadow: 2px 2px 34px 5px rgba(251,255,0,0.5) !important;
 } .u-section-2 {
   background-image: url("images/images2.png");
   background-position: 50% 50%;
@@ -460,4 +563,27 @@
   height: 586px;
   margin-top: 0;
   margin-bottom: 0;
+}
+
+@media (max-width: 991px) {
+   .u-section-2 {
+    min-height: 586px;
+  }
+}
+
+@media (max-width: 767px) {
+   .u-section-2 {
+    min-height: 588px;
+  }
+
+  .u-section-2 .u-map-1 {
+    margin-top: 1px;
+    margin-bottom: 1px;
+  }
+}
+
+@media (max-width: 575px) {
+   .u-section-2 {
+    min-height: 370px;
+  }
 }
