--- a/Post-Template.css
+++ b/Post-Template.css
@@ -1,5 +1,5 @@
  .u-section-1 {
-  background-image: linear-gradient(#be0000, #f1c50e);
+  background-image: linear-gradient(#fbff00, #be0000);
 }
 
 .u-section-1 .u-sheet-1 {
@@ -306,8 +306,8 @@
 }
 
 .u-section-2 .u-custom-html-1 {
-  margin-bottom: 46px;
+  margin-bottom: 0;
   height: auto;
-  min-height: 66px;
-  margin-top: 388px;
+  min-height: 500px;
+  margin-top: 0;
 }
