--- a/Home.css
+++ b/Home.css
@@ -182,7 +182,7 @@
     min-height: 149px;
   }
 } .u-section-2 {
-  background-image: linear-gradient(white, #be0000);
+  background-image: linear-gradient(white, #d80000);
   min-height: 1439px;
 }
 
