--- a/Contact.css
+++ b/Contact.css
@@ -3,7 +3,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 1143px;
+  min-height: 1163px;
 }
 
 .u-section-1 .u-list-1 {
@@ -22,7 +22,7 @@
   transition-duration: 0.5s;
   --animation-custom_in-translate_x: -300px;
   --animation-custom_in-scale: 1;
-  background-image: linear-gradient(#ffce00, #f1c50e);
+  background-image: none;
 }
 
 .u-section-1 .u-container-layout-1 {
@@ -33,8 +33,9 @@
   height: 64px;
   width: 64px;
   background-image: none;
-  margin: 28px auto 0;
-  padding: 10px;
+  color: rgb(0, 0, 0) !important;
+  margin: 26px auto 0;
+  padding: 8px;
 }
 
 .u-section-1 .u-text-1 {
@@ -44,7 +45,9 @@
 }
 
 .u-section-1 .u-text-2 {
-  margin: 25px 7px 0;
+  font-size: 1rem;
+  font-weight: 700;
+  margin: 26px 7px 0;
 }
 
 .u-section-1 .u-list-item-2 {
@@ -52,7 +55,7 @@
   transition-duration: 0.5s;
   --animation-custom_in-translate_x: -300px;
   --animation-custom_in-scale: 1;
-  background-image: linear-gradient(#ffce00, #f1c50e);
+  background-image: none;
 }
 
 .u-section-1 .u-container-layout-2 {
@@ -63,8 +66,9 @@
   height: 64px;
   width: 64px;
   background-image: none;
-  margin: 28px auto 0;
-  padding: 9px;
+  color: rgb(0, 0, 0) !important;
+  margin: 26px auto 0;
+  padding: 8px;
 }
 
 .u-section-1 .u-text-3 {
@@ -74,7 +78,9 @@
 }
 
 .u-section-1 .u-text-4 {
-  margin: 25px 7px 0;
+  font-size: 1rem;
+  font-weight: 700;
+  margin: 26px 7px 0;
 }
 
 .u-section-1 .u-btn-1 {
@@ -88,7 +94,7 @@
   transition-duration: 0.5s;
   --animation-custom_in-translate_x: -300px;
   --animation-custom_in-scale: 1;
-  background-image: linear-gradient(#ffce00, #f1c50e);
+  background-image: none;
 }
 
 .u-section-1 .u-container-layout-3 {
@@ -99,8 +105,9 @@
   height: 64px;
   width: 64px;
   background-image: none;
-  margin: 28px auto 0;
-  padding: 10px;
+  color: rgb(0, 0, 0) !important;
+  margin: 26px auto 0;
+  padding: 8px;
 }
 
 .u-section-1 .u-text-5 {
@@ -110,28 +117,31 @@
 }
 
 .u-section-1 .u-text-6 {
-  margin: 25px 7px 0;
+  font-size: 1rem;
+  font-weight: 700;
+  margin: 26px 7px 0;
 }
 
 .u-section-1 .u-shape-1 {
   width: 250px;
   height: 250px;
-  margin: 534px 202px 0 auto;
+  margin: 570px 202px 0 auto;
 }
 
 .u-section-1 .u-shape-2 {
   width: 250px;
   height: 250px;
-  margin: -756px auto 0 201px;
+  margin: -790px auto 0 203px;
 }
 
 .u-section-1 .u-layout-wrap-1 {
   width: 604px;
-  margin: -183px auto 60px;
+  min-height: 662px;
+  margin: -185px auto 60px;
 }
 
 .u-section-1 .u-layout-cell-1 {
-  min-height: 632px;
+  min-height: 674px;
   background-image: none;
   --animation-custom_in-translate_x: 0px;
   --animation-custom_in-translate_y: -300px;
@@ -145,16 +155,25 @@
   padding: 0;
 }
 
+.u-section-1 .u-icon-4 {
+  width: 64px;
+  height: 64px;
+  background-image: none;
+  color: rgb(0, 0, 0) !important;
+  margin: 28px auto 0;
+  padding: 6px;
+}
+
 .u-section-1 .u-text-7 {
   font-weight: 700;
   font-size: 3rem;
-  margin: 74px auto 0;
+  margin: 16px auto 0;
 }
 
 .u-section-1 .u-form-1 {
   height: 346px;
   background-image: none;
-  margin: 68px 36px 0 58px;
+  margin: 22px 36px 0 58px;
 }
 
 .u-section-1 .u-label-1 {
@@ -163,7 +182,8 @@
 
 .u-section-1 .u-input-1 {
   background-image: none;
-  font-weight: 400;
+  font-size: 1.125rem;
+  font-weight: normal;
 }
 
 .u-section-1 .u-label-2 {
@@ -172,7 +192,8 @@
 
 .u-section-1 .u-input-2 {
   background-image: none;
-  font-weight: 400;
+  font-size: 1.125rem;
+  font-weight: normal;
 }
 
 .u-section-1 .u-label-3 {
@@ -181,7 +202,8 @@
 
 .u-section-1 .u-input-3 {
   background-image: none;
-  font-weight: 400;
+  font-size: 1.125rem;
+  font-weight: normal;
 }
 
 .u-section-1 .u-btn-2 {
@@ -216,6 +238,8 @@
   }
 
   .u-section-1 .u-text-2 {
+    width: auto;
+    margin-top: 21px;
     margin-left: 0;
     margin-right: 0;
   }
@@ -233,6 +257,8 @@
   }
 
   .u-section-1 .u-text-4 {
+    width: auto;
+    margin-top: 21px;
     margin-left: 0;
     margin-right: 0;
   }
@@ -250,18 +276,20 @@
   }
 
   .u-section-1 .u-text-6 {
+    width: auto;
+    margin-top: 21px;
     margin-left: 0;
     margin-right: 0;
   }
 
   .u-section-1 .u-shape-1 {
-    margin-top: 531px;
-    margin-right: 95px;
+    margin-top: 578px;
+    margin-right: 102px;
   }
 
   .u-section-1 .u-shape-2 {
-    margin-top: -753px;
-    margin-left: 101px;
+    margin-top: -798px;
+    margin-left: 102px;
   }
 
   .u-section-1 .u-btn-2 {
@@ -272,7 +300,7 @@
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1548px;
+    min-height: 1466px;
   }
 
   .u-section-1 .u-list-1 {
@@ -300,13 +328,21 @@
   }
 
   .u-section-1 .u-shape-1 {
-    margin-top: 534px;
-    margin-right: -17px;
+    margin-top: 496px;
+    margin-right: 22px;
   }
 
   .u-section-1 .u-shape-2 {
-    margin-top: -756px;
-    margin-left: -17px;
+    margin-top: -715px;
+    margin-left: -8px;
+  }
+
+  .u-section-1 .u-layout-wrap-1 {
+    min-height: 88px;
+  }
+
+  .u-section-1 .u-layout-cell-1 {
+    min-height: 632px;
   }
 
   .u-section-1 .u-btn-2 {
@@ -317,74 +353,51 @@
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1466px;
+    min-height: 1386px;
   }
 
   .u-section-1 .u-list-1 {
-    width: 540px;
+    margin-top: 10px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-1 .u-repeater-1 {
-    min-height: 591px;
-  }
-
-  .u-section-1 .u-icon-1 {
-    padding: 9px;
-  }
-
-  .u-section-1 .u-text-1 {
-    margin-left: 20px;
-    margin-right: 20px;
+    min-height: 544px;
   }
 
   .u-section-1 .u-text-2 {
-    width: auto;
     margin-top: 28px;
-    margin-left: 5px;
-    margin-right: 5px;
-  }
-
-  .u-section-1 .u-text-3 {
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 22px;
+    margin-right: 22px;
   }
 
   .u-section-1 .u-text-4 {
-    width: auto;
     margin-top: 28px;
-    margin-left: 5px;
-    margin-right: 5px;
-  }
-
-  .u-section-1 .u-icon-3 {
-    padding: 9px;
-  }
-
-  .u-section-1 .u-text-5 {
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 22px;
+    margin-right: 22px;
   }
 
   .u-section-1 .u-text-6 {
-    width: auto;
     margin-top: 28px;
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-left: 22px;
+    margin-right: 22px;
   }
 
   .u-section-1 .u-shape-1 {
-    margin-top: 494px;
-    margin-right: -28px;
+    margin-top: 552px;
+    margin-right: -36px;
   }
 
   .u-section-1 .u-shape-2 {
-    margin-top: -676px;
-    margin-left: -33px;
+    margin-top: -675px;
+    margin-left: -36px;
   }
 
   .u-section-1 .u-layout-wrap-1 {
     width: 540px;
-    margin-top: -223px;
+    margin-top: -225px;
   }
 
   .u-section-1 .u-form-1 {
@@ -400,11 +413,7 @@
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1787px;
-  }
-
-  .u-section-1 .u-list-1 {
-    width: 340px;
+    min-height: 1710px;
   }
 
   .u-section-1 .u-repeater-1 {
@@ -412,14 +421,13 @@
     min-height: 810px;
   }
 
+  .u-section-1 .u-list-item-1 {
+    background-position: 50% 50%;
+  }
+
   .u-section-1 .u-container-layout-1 {
     padding-left: 30px;
     padding-right: 30px;
-  }
-
-  .u-section-1 .u-text-1 {
-    margin-left: 0;
-    margin-right: 0;
   }
 
   .u-section-1 .u-text-2 {
@@ -427,14 +435,13 @@
     margin-right: 0;
   }
 
+  .u-section-1 .u-list-item-2 {
+    background-position: 50% 50%;
+  }
+
   .u-section-1 .u-container-layout-2 {
     padding-left: 30px;
     padding-right: 30px;
-  }
-
-  .u-section-1 .u-text-3 {
-    margin-left: 0;
-    margin-right: 0;
   }
 
   .u-section-1 .u-text-4 {
@@ -442,14 +449,13 @@
     margin-right: 0;
   }
 
+  .u-section-1 .u-list-item-3 {
+    background-position: 50% 50%;
+  }
+
   .u-section-1 .u-container-layout-3 {
     padding-left: 30px;
     padding-right: 30px;
-  }
-
-  .u-section-1 .u-text-5 {
-    margin-left: 0;
-    margin-right: 0;
   }
 
   .u-section-1 .u-text-6 {
@@ -458,34 +464,31 @@
   }
 
   .u-section-1 .u-shape-1 {
-    margin-top: 551px;
-    margin-right: -27px;
+    margin-top: 605px;
+    margin-right: -34px;
   }
 
   .u-section-1 .u-shape-2 {
-    margin-top: -773px;
+    margin-top: -794px;
+    margin-left: -34px;
   }
 
   .u-section-1 .u-layout-wrap-1 {
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+    width: 340px;
+    margin-top: -215px;
   }
 
   .u-section-1 .u-layout-cell-1 {
-    min-height: 732px;
+    min-height: 100px;
   }
 
   .u-section-1 .u-text-7 {
     font-size: 2.75rem;
-    width: auto;
   }
 
   .u-section-1 .u-form-1 {
-    height: 453px;
-    margin-top: 69px;
-    margin-right: initial;
-    margin-left: initial;
+    margin-right: 0;
+    margin-left: 0;
   }
 
   .u-section-1 .u-btn-2 {
@@ -503,7 +506,7 @@
 }
 
 .u-section-1 .u-list-item-3:before {
-  background-image: url(images/2304040.png) !important;
+  background-image: url(https://pixabay.com/get/g1308946c5e20a2d7c758ccd89583468e8335e8c84c91dd6cfa81471db4de869d396af08e0c4215e0cb7b15441397e10b328aee7b0813522e18f55aaab0b272e6_1280.png) !important;
 }
 
 .u-section-1 .u-list-item-3.u-list-item-3.u-list-item-3:hover {
@@ -521,7 +524,7 @@
 }
 
 .u-section-1 .u-list-item-2:before {
-  background-image: url(images/vector-email-icon.webp) !important;
+  background-image: url(https://pixabay.com/get/gba2a3c8c62010a678c4b93e8e3163b2fa7f4e8e12eea4889c8aa206db933e5569794bc38bf73589006af93d25922a6c192928d4853d7fce3747cc4db34ae0a24_1280.png) !important;
 }
 
 .u-section-1 .u-list-item-2.u-list-item-2.u-list-item-2:hover {
@@ -539,7 +542,7 @@
 }
 
 .u-section-1 .u-list-item-1:before {
-  background-image: url(images/desk-phone-icon-flat-01-.jpg) !important;
+  background-image: url(images/call.png) !important;
 }
 
 .u-section-1 .u-list-item-1.u-list-item-1.u-list-item-1:hover {
@@ -551,7 +554,7 @@
 } .u-section-2 {
   background-image: url("images/images2.png");
   background-position: 50% 50%;
-  min-height: 50vw;
+  min-height: 586px;
 }
 
 .u-section-2 .u-map-1 {
@@ -561,8 +564,18 @@
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
   height: 586px;
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0;
+}
+
+@media (max-width: 1199px) {
+   .u-section-2 {
+    min-height: 483px;
+  }
+
+  .u-section-2 .u-map-1 {
+    margin-right: initial;
+    margin-left: initial;
+  }
 }
 
 @media (max-width: 991px) {
@@ -579,6 +592,8 @@
   .u-section-2 .u-map-1 {
     margin-top: 1px;
     margin-bottom: 1px;
+    margin-right: initial;
+    margin-left: initial;
   }
 }
 
