--- a/Gallery.css
+++ b/Gallery.css
@@ -1,5 +1,5 @@
  .u-section-1 {
-  background-image: none;
+  background-image: linear-gradient(to right, #ffce00, #d80000);
 }
 
 .u-section-1 .u-sheet-1 {
@@ -13,7 +13,7 @@
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
-  background-image: linear-gradient(100deg, #be0000, #ffce00);
+  background-image: linear-gradient(100deg, #d80000, #ffce00);
   box-shadow: 0px 0px 15px 5px rgba(0,0,0,0.4);
   min-height: 248px;
   width: 1200px;
@@ -28,7 +28,7 @@
   width: 793px;
   min-height: 163px;
   height: auto;
-  margin: 22px 220px 0 auto;
+  margin: 22px auto 0 185px;
 }
 
 .u-section-1 .u-text-1 {
@@ -110,34 +110,112 @@
   grid-gap: 41px;
 }
 
+.u-section-1 .u-gallery-item-7 {
+  --effect-scale: 0.75;
+  transition-duration: 0.25s;
+}
+
+.u-section-1 .u-back-slide-7 {
+  transition-duration: 2s;
+}
+
+.u-section-1 .u-back-image-7 {
+  right: -25px;
+}
+
 .u-section-1 .u-over-slide-7 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 20px;
+  transition-duration: 1s;
+  padding: 100px;
+}
+
+.u-section-1 .u-gallery-item-8 {
+  --effect-scale: 0.75;
+  transition-duration: 0.25s;
+}
+
+.u-section-1 .u-back-slide-8 {
+  transition-duration: 2s;
+}
+
+.u-section-1 .u-back-image-8 {
+  right: -25px;
 }
 
 .u-section-1 .u-over-slide-8 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 20px;
+  transition-duration: 1s;
+  padding: 100px;
+}
+
+.u-section-1 .u-gallery-item-9 {
+  --effect-scale: 0.75;
+  transition-duration: 0.25s;
+}
+
+.u-section-1 .u-back-slide-9 {
+  transition-duration: 2s;
+}
+
+.u-section-1 .u-back-image-9 {
+  right: -25px;
 }
 
 .u-section-1 .u-over-slide-9 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 20px;
+  transition-duration: 1s;
+  padding: 100px;
+}
+
+.u-section-1 .u-gallery-item-10 {
+  --effect-scale: 0.75;
+  transition-duration: 0.25s;
+}
+
+.u-section-1 .u-back-slide-10 {
+  transition-duration: 2s;
+}
+
+.u-section-1 .u-back-image-10 {
+  right: -25px;
 }
 
 .u-section-1 .u-over-slide-10 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 20px;
+  transition-duration: 1s;
+  padding: 100px;
+}
+
+.u-section-1 .u-gallery-item-11 {
+  --effect-scale: 0.75;
+  transition-duration: 0.25s;
+}
+
+.u-section-1 .u-back-slide-11 {
+  transition-duration: 2s;
+}
+
+.u-section-1 .u-back-image-11 {
+  right: -25px;
 }
 
 .u-section-1 .u-over-slide-11 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 20px;
+  transition-duration: 1s;
+  padding: 100px;
+}
+
+.u-section-1 .u-gallery-item-12 {
+  --effect-scale: 0.75;
+  transition-duration: 0.25s;
+}
+
+.u-section-1 .u-back-slide-12 {
+  transition-duration: 2s;
+}
+
+.u-section-1 .u-back-image-12 {
+  right: -25px;
 }
 
 .u-section-1 .u-over-slide-12 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 20px;
+  transition-duration: 1s;
+  padding: 100px;
 }
 
 @media (max-width: 1199px) {
@@ -159,8 +237,8 @@
   }
 
   .u-section-1 .u-group-elements-1 {
-    margin-top: 1px;
-    margin-right: auto;
+    margin-top: 8px;
+    margin-left: auto;
   }
 
   .u-section-1 .u-gallery-1 {
@@ -346,7 +424,11 @@
     margin-top: 93px;
     margin-bottom: 45px;
   }
-}.u-section-2 .u-sheet-1 {
+} .u-section-2 {
+  background-image: linear-gradient(to right, #ffce00, #d80000);
+}
+
+.u-section-2 .u-sheet-1 {
   min-height: 1953px;
 }
 
@@ -357,7 +439,7 @@
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
-  background-image: linear-gradient(100deg, #be0000, #ffce00);
+  background-image: linear-gradient(100deg, #d80000, #ffce00);
   box-shadow: 0px 0px 15px 5px rgba(0,0,0,0.4);
   width: 1200px;
   min-height: 223px;
@@ -681,7 +763,11 @@
     margin-top: 39px;
     margin-bottom: 39px;
   }
-}.u-section-3 .u-sheet-1 {
+} .u-section-3 {
+  background-image: linear-gradient(to right, #ffce00, #d80000);
+}
+
+.u-section-3 .u-sheet-1 {
   min-height: 1927px;
 }
 
@@ -692,7 +778,7 @@
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
-  background-image: linear-gradient(100deg, #be0000, #ffce00);
+  background-image: linear-gradient(100deg, #d80000, #ffce00);
   box-shadow: 0px 0px 15px 5px rgba(0,0,0,0.4);
   width: 1208px;
   min-height: 223px;
